# course-work-1

./: Client.cs  Product.cs  Program.cs  WebServer.cs  main.py  pyproject.toml  requirements.txt  storage.json  Курсач.csproj  Курсач.sln  Сashier.cs
coursework/: models.py  storage.py  ui.py
tests/: test_coursework.py  text_models.py
