[tool.poetry]
name = "CourseWork"
version = "0.1.0"
description = ""
authors = ["Vadym Sorokin <nicourrrn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.2.3"
qasync = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
